[package]
name = "claude-tools"
version = "0.1.0"
edition = "2021"
description = "CLI tools for Claude Code - monitor, resume, sync, budget"
license = "MIT"

[[bin]]
name = "claude-tools"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
